--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -28,34 +28,29 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
-<!--
             <scope>provided</scope>
--->
         </dependency>
         <dependency>
             <groupId>org.apache.river</groupId>
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
-            <scope>provided</scope>
-<!--
             <scope>runtime</scope>
--->
         </dependency>
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
-            <scope>provided</scope>
+    <!--        <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
-            <scope>provided</scope>
+    <!--        <scope>provided</scope>-->
         </dependency>
     </dependencies>
     <build>
     <plugins>
-  <!--      <plugin>
+        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <configuration>
@@ -69,7 +64,7 @@
                     </manifest>
                 </archive>
             </configuration>
-        </plugin>-->
+        </plugin>
     </plugins>
     </build>
 </project>
