--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
@@ -12,7 +12,6 @@ com.sun.jini.start {
 	policy = "${java.security.policy}";
 	
 	runtimeClasspath = "${provider.runtime.classpath}";
-	//= System.getenv("runtime.classpath");
 	ps = System.getProperty("path.separator");
 	
 	// webster root directories
@@ -32,13 +31,13 @@ com.sun.jini.start {
 
 	new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
-// 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-env"),
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-env"),
 			policy,
 			ConfigUtil.concat(new Object[] {
 			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
-			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps
-			    //runtimeClasspath
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
+			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
@@ -46,8 +45,8 @@ com.sun.jini.start {
 
 
 	new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api"),
- //			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 			policy,
 			ConfigUtil.concat(new Object[] {
 			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
@@ -59,8 +58,8 @@ com.sun.jini.start {
        ),
 
        new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api"),
- 	//		+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 			policy,
 			ConfigUtil.concat(new Object[] {
 			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
@@ -72,8 +71,8 @@ com.sun.jini.start {
 	   ),
 
        new SorcerServiceDescriptor(
-		      ""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api"),
-	//			  +" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+		      ""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
+				  +" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
 		      policy,
 		      ConfigUtil.concat(new Object[] {
                   Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
