--- a/iGrid/tools/browser/pom.xml
+++ b/iGrid/tools/browser/pom.xml
@@ -60,12 +60,12 @@
             <version>1.0.1</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>com.boundary</groupId>
-            <artifactId>high-scale-lib</artifactId>
-            <version>1.0.4-SNAPSHOT</version>
-            <scope>runtime</scope>
-        </dependency>
+		<dependency>
+			<groupId>com.github.stephenc.high-scale-lib</groupId>
+			<artifactId>high-scale-lib</artifactId>
+			<version>1.1.4</version>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
