--- a/iGrid/tools/pom.xml
+++ b/iGrid/tools/pom.xml
@@ -30,7 +30,7 @@
 		<module>dependencies</module>
 	</modules>
 	<build>
-	<plugins>
+<!--	<plugins>
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-jar-plugin</artifactId>
@@ -46,6 +46,6 @@
 		    </archive>
 		</configuration>
 	    </plugin>
-	</plugins>
+	  </plugins>-->
 	</build>
 </project>
