--- a/tools/browser/pom.xml
+++ b/tools/browser/pom.xml
@@ -75,6 +75,21 @@
 
     <build>
         <plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <addClasspath>true</addClasspath>
+			    <addExtensions>false</addExtensions>
+			    <classpathPrefix></classpathPrefix>
+			    <classpathLayoutType>custom</classpathLayoutType>
+			    <customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
+			</manifest>
+		    </archive>
+		</configuration>
+	    </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
