--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>sorcer-root</artifactId>
+        <artifactId>sorcer</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
 		<version>1.0-SNAPSHOT</version>
     </parent>
@@ -206,29 +206,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>replacer</artifactId>
-                <version>1.5.2</version>
-                <executions>
-                    <execution>
-                        <phase>prepackage</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <file>target/sorcer-${project.version}/bin/sorcer-boot.xml</file>
-                    <replacements>
-                        <replacement>
-                            <token>bin/common-run.xml</token>
-                            <value>bin/sorcer-run.xml</value>
-                        </replacement>
-                    </replacements>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
 
