--- a/pom.xml
+++ b/pom.xml
@@ -165,15 +165,6 @@
                     </filesets>
                 </configuration>
             </plugin>
-            <!--	    <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                      <systemPropertyVariables>
-                          <SORCER_HOME>${sorcer.home}</SORCER_HOME>
-                      </systemPropertyVariables>
-                    </configuration>
-                    </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -275,17 +266,14 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+
+		<!-- sleepycat -->
         <repository>
             <id>oracle</id>
             <url>http://download.oracle.com/maven/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository>
-        <repository>
-            <id>maven.boundary.com</id>
-            <name>maven.boundary.com-releases</name>
-            <url>http://maven.boundary.com/artifactory/external</url>
         </repository>
     </repositories>
 
