--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - echo "SORCER_HOME is $SORCER_HOME"
 install: mvn -q install
 before_script:
-  - $SORCER_HOME/bin/sorcer-boot &
+  - $SORCER_HOME/bin/sorcer-boot & sleep 10
 script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
 jdk:
 #  - openjdk6
