--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,13 @@ before_install:
   - unset SORCER_HOME
   - export SORCER_HOME=`pwd`
   - echo "SORCER_HOME is $SORCER_HOME"
+  - ifconfig
+  - cat /etc/hosts
 install: mvn -q install
 before_script:
   - $SORCER_HOME/bin/sorcer-boot & sleep 10
-script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
+script: ls
+#cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
 jdk:
 #  - openjdk6
 #  - openjdk7
