--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_install:
   - cat /etc/hosts
 install: mvn -q install
 before_script:
+  - cp -f $SORCER_HOME/configs/template/sorcer.env_int-tests $SORCER_HOME/configs/sorcer.env
   - $SORCER_HOME/bin/sorcer-boot & sleep 10
-script: ls
-#cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
+script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
 jdk:
 #  - openjdk6
 #  - openjdk7
