--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -25,6 +25,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-util</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
+        <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
