--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-util</artifactId>
+            <version>${v.sorcer}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-webster</artifactId>
 			<version>${v.sorcer}</version>
 			<scope>runtime</scope>
