--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ before_install:
   - ifconfig
   - cat /etc/hosts
   - hostname
-  - ping `hostname` -c 2
 install: mvn -q install
 before_script:
   - cp -f $SORCER_HOME/configs/template/sorcer.env_int-tests $SORCER_HOME/configs/sorcer.env
-  - $SORCER_HOME/bin/sorcer-boot 
-#  & sleep 10
+  - export JAVA_OPTS=-Djava.net.preferIPv6Stack=true
+  - $SORCER_HOME/bin/sorcer-boot #  & sleep 10
 script: ls
 #cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
 jdk:
