--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - hostname
 install: mvn -q install
 before_script:
-  - cp -f $SORCER_HOME/configs/template/sorcer.env_int-tests $SORCER_HOME/configs/sorcer.env
-  - export JAVA_OPTS=-Djava.net.preferIPv6Stack=true
+#  - cp -f $SORCER_HOME/configs/template/sorcer.env_int-tests $SORCER_HOME/configs/sorcer.env
+#  - export JAVA_OPTS=-Djava.net.preferIPv6Stack=true
   - $SORCER_HOME/bin/sorcer-boot #  & sleep 10
 script: ls
 #cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
