--- a/examples/ex6/ex6-req/pom.xml
+++ b/examples/ex6/ex6-req/pom.xml
@@ -44,6 +44,11 @@
             <version>2.1.3</version>
         </dependency>
         <dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+            <version>${v.jini}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
