--- a/examples/ex6/ex6-sui/pom.xml
+++ b/examples/ex6/ex6-sui/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>sos-platform</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
+        <dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+            <version>${v.jini}</version>
+        </dependency>
     </dependencies>
 </project>
