--- a/examples/ex1/ex1-prv/pom.xml
+++ b/examples/ex1/ex1-prv/pom.xml
@@ -37,7 +37,12 @@
 			<artifactId>sos-util</artifactId>
 			<version>${v.sorcer}</version>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-boot</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.river</groupId>
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
