--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -20,6 +20,13 @@
 ## load http://192.168.0.15:9000/sorcer/sos-env.jar
 ## load file://!{user.home}/.nsh/lib/*.jar
 
+## You can also specify the codebase that will be shared for all scripts that you invoke, however,
+## during the startup of the shell the internal webster is not yet running therefore only
+## urls to external websters are supported in the following format:
+##
+## codebase mvn://groupId:Artifact:[version]@host:port - specifies a jar file on a remote maven repository
+## codebase http:// - specifies remote jar file using a direct URL
+
 
     # load required libraries
 
@@ -29,10 +36,8 @@
     load mvn://org.codehaus.groovy:groovy-all
     load mvn://net.jini.lookup:serviceui
     load mvn://org.rioproject:rio-platform
-    #load mvn://org.sorcersoft.sorcer:ex6-api
+    # codebase mvn://org.sorcersoft.sorcer:ex2-api@192.168.0.10:50001
 
-
-    
     # load user specific libraries
     load !{user.home}/.nsh/lib/*.jar
     
