--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,6 +14,7 @@
 	<name>SORCER examples</name>
 
 	<modules>
+        <module>ex0</module>
 		<module>ex1</module>
 		<module>ex2</module>
 		<module>ex3</module>
@@ -22,7 +22,7 @@
 		<module>ex5</module>
 		<module>ex6</module>
 		<module>first</module>
-	</modules>
+  </modules>
 
 	<build>
 		<pluginManagement>
