--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<v.rio>5.0-M2</v.rio>
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4</v.sigar>
-		<v.lockmgr>0.2.sorcer2-SNAPSHOT</v.lockmgr>
+		<v.lockmgr>0.2.sorcer2</v.lockmgr>
 
         <!-- required for site -->
         <v_sorcer>${v.sorcer}</v_sorcer>
