--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<inceptionYear>2013</inceptionYear>
 
 	<properties>
-		<v.sorcer>1.0-SNAPSHOT</v.sorcer>
+		<v.sorcer>${project.version}</v.sorcer>
 		<v.jini>2.2.1</v.jini>
 		<v.blitz>2.1.7</v.blitz>
 		<v.sleepycat>4.1.21</v.sleepycat>
@@ -28,7 +28,7 @@
 		<v.lockmgr>0.2.sorcer2</v.lockmgr>
 
         <!-- required for site -->
-        <v_sorcer>1.0-SNAPSHOT</v_sorcer>
+        <v_sorcer>${project.version}</v_sorcer>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
