--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -11,8 +11,16 @@ sorcer.tools.codeserver {
     home = "${sorcer.home}";
     rootDir = Resolver.getRootDir() + "/";
     repoDir = Resolver.getRepoDir() + "/";
-    jiniLibPath 	 = home + "${/}lib${/}river";
     deployPath 		 = home + "${/}deploy";
+
+    // for compatibility with old sorcer distro
+    sorcerLibPath 	 = home + "${/}lib${/}sorcer";
+    jiniLibPath 	 = home + "${/}lib${/}jini";
+    rioLibPath 	     = home + "${/}lib${/}rio";
+    riverLibPath 	 = home + "${/}lib${/}river";
+    commonsLibPath 	 = home + "${/}lib${/}commons";
+    jiniLookupLibPath= home + "${/}lib${/}jini-lookup";
+    //
 
     //provider.webster.port
     websterPort = Booter.getWebsterPort(); 
@@ -26,8 +34,12 @@ sorcer.tools.codeserver {
     roots = new String[] {
       rootDir,
       repoDir,
-      jiniLibPath,
       deployPath,
+      sorcerLibPath,
+      jiniLibPath,
+      jiniLookupLibPath,
+      riverLibPath,
+      commonsLibPath
     };
     
     options = new String[] { "-port", "" + websterPort, 
