--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -10,11 +10,14 @@ sorcer.local.repo.location = ${user.home}/.m2/repository
 # use provider names suffixed with the OS user name
 sorcer.provider.name.suffixed = true
 # custom suffix for provider names
-sorcer.provider.name.suffix = DEV
+#sorcer.provider.name.suffix = DEV
+sorcer.provider.name.suffix = ${user.name}
 
 # Groups to register/lookup
-provider.groups=sorcer.TEST-DEV
-provider.space.group=sorcer.TEST-DEV
+provider.groups=sorcer.${sorcer.provider.name.suffix}
+provider.space.group=sorcer.${sorcer.provider.name.suffix}
+
+# Groups to register/lookup
 provider.space.name=Blitz Space
 #provider.worker.transactional=true
 worker.transactional.lease.time=50000
@@ -49,11 +52,12 @@ provider.webster.port=9010
 # Data/file repository configuration
 # Scratch directory format: 
 # ${data.root.dir}/${provider.data.dir}/${provider.scratch.dir}
-#data.root.dir=${sorcer.home}/data
+scratch.dir=scratch
+data.root.dir=${sorcer.home}/data
 #provider.data.dir=provider
 #requestor.data.dir=requestor
 #provider.scratch.dir=scratch
-data.server.interface=${provider.webster.interface}
+data.server.interface=${localhost}
 data.server.port=${provider.webster.port}
 
 
@@ -62,7 +66,6 @@ data.server.port=${provider.webster.port}
 # ${provider.root.dir}/${provider.data.dir}/${provider.scratch.dir}
 # HTTP server document root: ${provider.root.dir}/${provider.data.dir}
 provider.root.dir=${sorcer.home}/data/provider
-
 requestor.root.dir=${sorcer.home}/data/requestor
 
 system.tmp.dir=${sorcer.home}/tmp
