--- a/examples/caller/pom.xml
+++ b/examples/caller/pom.xml
@@ -5,9 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>provider-root</artifactId>
+		<artifactId>examples</artifactId>
 		<version>1.0-SNAPSHOT</version>
-        <relativePath/>
 	</parent>
 
 	<groupId>org.sorcersoft.sorcer</groupId>
