--- a/sos/sorcer-api/pom.xml
+++ b/sos/sorcer-api/pom.xml
@@ -39,19 +39,18 @@
             <version>${v.jini}</version>
         </dependency>
         <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-platform</artifactId>
+            <version>${v.jini}</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <version>${v.slf4j}</version>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${v.slf4j}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
